[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fig_gen_template"
version = "0.1.0"
description = "Template for generating multi-panel scientific figures programmatically"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "svgutils",
    "jupyter",
    "cairosvg",
    "playwright",
]

[project.optional-dependencies]
viz = [
    "pandas",
    "altair",
    "vl-convert-python",
    "matplotlib",
    "seaborn",
    "great_tables",
    "plotly",
    "plotly-express",
    "aquarel",
    "kaleido",
]

# [tool.hatch.build.targets.wheel]
# packages = ["src/fig_gen_template"]
